Overflow Correction
Overflow correction for client table

--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ body{
     border-radius: 1rem;
     max-height: calc(100vh - 1rem);
     overflow-y:auto;
+    overflow-x:hidden;
 }
 
 .gridTableHeader{
